2006-09-08 Jim Winstead <jimw@mysql.com>, Patrick Galbraith <patg@mysql.com>
(3.0007) (3.0006 is the same as 3.0005)
  * Make sure to call dbd_st_finish when all rows from a statement handle
    have been fetched. (Bug #20153, Bug# 21607, as rt.cpan.org ticket #s
    20464, 21241) Jim Winstead
  * Patch from Steve Hay to fix bind_param to deal properly with insertion
    of a NULL into an INT or DOUBLE column using server-side prepare.
    Converted Steve's dbi.pl script to expose this problem to 40bindparam2
    test.
  * Fix to mysql_st_internal_execute to keep from passing undefined dbh
    handle member (bind_type_guessing) to parse_param causing crash on
    OpenBSD. Reported on rt.cpan.org (#20868) by Kyle Georg, as well as
    info from Sam Smith and Federico Giannici
  * Cleaned up tests to make sure test table is dropped at end of test.


2006-06-10 Patrick Galbraith <patg@mysql.com) (3.0005)
  * Fix dbd_st_finish in 3.0004 didn't clean up bind buffers resulting in
    a memory leak. See eg/prepare_memory_usage.pl to see how this manifests
    itself. Thanks to Jason Snell for giving me a good script to reproduce
    this!
  * Fix to parse_params, mysql.xs dbh->do, and bind_param to deal with
    passing substr to "do" for placeholder value. Thanks Martin Waite for
    the patch to parse_params (extended to mysql.xs "do" and bind_param for
    server-side prepared statements.

2006-05-17 Patrick Galbraith <patg@mysql.com) (3.0004)
  * Fix dbd_st_finish which closed the handle prematurely (Martin Evans)
  * Compile issues (Martin Evans)
  * Fix to dbd_bind_ph to deal with numbers (ints, floats) correctly
    (Alexey Stroganov)
  * Test changes - bind_param 41 and 42

2006-04-29 Patrick Galbraith <patg@mysql.com> (3.0003)
  * Fixed bug where if mysql_server_prepare is set and a prepare
    fails, only a warning is issued and no error text is
    available (Thanks Martin Evans!)
  * Added support for ParamValues and associated test (Martin Evans)